src/test/resources/semantic/error/TS_ERROR_STRUCT_NO_DEFINIDO2.ru
struct A{

}
impl A{
    .(){}
    st fn m1()->C{
        
    }
}

start{

}